# GLPractice

./: CMakeLists.txt
res/shaders/: shader.frag  shader.vert  sprite_shader.frag  sprite_shader.vert
src/: main.cpp
src/lib/: Buffer.h  Drawable.cpp  Drawable.h  Drawer.cpp  Drawer.h  Game.h  GameObject.cpp  GameObject.h  OpenGL.h  OpenGLBuffer.h  OpenGLDrawer.cpp  OpenGLDrawer.h  OpenGLShaderProgram.cpp  OpenGLShaderProgram.h  ShaderProgram.h  WinAssetLoader.cpp  WinAssetLoader.h
src/lib/core/asset/: AssetLoader.h  FileLoader.h  ImageInfo.h  ImageLoader.h  RenderResourceManager.h  Resources.cpp  Resources.h
src/lib/core/asset/soil/: SoilImageLoader.cpp  SoilImageLoader.h
src/lib/core/asset/win/: WinAssetLoader.cpp  WinAssetLoader.h  WinFileLoader.cpp  WinFileLoader.h
src/lib/core/game/: Drawable.h  Engine.cpp  Engine.h  GameObject.cpp  GameObject.h  Sprite.cpp  Sprite.h
src/lib/core/input/: Input.cpp  Input.h  InputManager.h
src/lib/core/input/sfml/: SFMLInputManager.cpp  SFMLInputManager.h
src/lib/core/mat/: Color.cpp  Color.h  Color32.cpp  Color32.h  Vector2.cpp  Vector2.h
src/lib/core/render/: Buffer.h  Drawer.h  ShaderProgram.h  Texture.h  VertexAttributeLocation.cpp  VertexAttributeLocation.h
src/lib/core/utils/: MathUtils.cpp  MathUtils.h  SmartPointer.h
src/lib/core/window/: WindowManager.h  WindowOptions.cpp  WindowOptions.h
src/lib/opengl/: OpenGL.h
src/lib/opengl/asset/: OpenGLResourceManager.cpp  OpenGLResourceManager.h
src/lib/opengl/render/: OpenGLBuffer.cpp  OpenGLBuffer.h  OpenGLDrawer.cpp  OpenGLDrawer.h  OpenGLShaderProgram.cpp  OpenGLShaderProgram.h  OpenGLTexture.cpp  OpenGLTexture.h
src/lib/opengl/utils/: OpenGLUtils.cpp  OpenGLUtils.h
src/test/: Shape.cpp  Shape.h  Spaceship.cpp  Spaceship.h
